--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -98,7 +98,7 @@
 						}
 						else
 						{
-							<img src="~/images/default-icon.png" class="card-img-top">
+							<img src="~/images/default-poster1.png" />
 						}
 					</a>
 					<div class="card-body">
