Adding page for the user to view own movies and option to edit or delete them

--- a/RentAMovie/Views/Movie/Edit.cshtml
+++ b/RentAMovie/Views/Movie/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AddMovieFormModule
 
 @{
-    ViewData["Title"] = "Create Movie";
+    ViewData["Title"] = "Edit Movie";
 }
 
-<h2>Create movie</h2>
+<h2>Edit movie</h2>
 <partial name="~/Views/Shared/Movie/_MovieForm.cshtml" />
 
 @section Scripts {
