--- a/RentAMovie/Views/Shared/_Layout.cshtml
+++ b/RentAMovie/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
                                 <li><a class="dropdown-item" asp-controller="Movie" asp-action="Popular">Popular</a></li>
                                 <li><a class="dropdown-item" asp-controller="Movie" asp-action="TopRated">Top rated</a></li>
-                                <li><a class="dropdown-item" href="#">My movies</a></li>
+                                <li><a class="dropdown-item" asp-controller="Movie" asp-action="UserMovies">My movies</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
