Preventing edits of movies that don't belong to the same user

--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -5,6 +5,13 @@
     bool firstSlide = true;
 }
 
+<div style="background-color: #ff6459;">
+    @if (TempData["error"] != null)
+    {
+        <p style="text-align: center; color: #f2f2f2; padding: 5px; font-size: 1.1rem;">@TempData["error"]</p>
+    }
+</div>
+
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
