--- a/RentAMovie/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -1,1 +1,6 @@
 ﻿@using RentAMovie.Areas.Identity.Pages.Account
+@using Microsoft.AspNetCore.Identity
+@using RentAMovie.Areas.Identity
+@using RentAMovie.Areas.Identity.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using RentAMovie.Data.Models
