--- a/RentAMovie/Views/Movie/UserMovies.cshtml
+++ b/RentAMovie/Views/Movie/UserMovies.cshtml
@@ -1,7 +1,6 @@
 ﻿@model List<UserMovieViewCardModel>
 @{
-	ViewData["Title"] = "Search";
-	string posterPath = "https://image.tmdb.org/t/p/w500";
+	ViewData["Title"] = "My Movies";
 	string ratingColor;
 }
 
