--- a/RentAMovie/Views/Shared/_LoginPartial.cshtml
+++ b/RentAMovie/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello 
             @(User.Identity != null && User.Identity.Name != null ? 
-            (User.Identity.Name).Substring(0, (User.Identity.Name).IndexOf("@")) :
+            User.Identity.Name :
             "User")!</a>
     </li>
     <li class="nav-item">
