--- a/RentAMovie/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
+<div class="row form-container">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
@@ -37,6 +37,9 @@
     </div>
 </div>
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/authentication.css" />
+}
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
