--- a/RentAMovie/Views/Movie/UserMovies.cshtml
+++ b/RentAMovie/Views/Movie/UserMovies.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<UserMovieViewCardModel>
+﻿@model List<ViewUserMovieCardModel>
 @{
 	ViewData["Title"] = "My Movies";
 	string ratingColor;
