--- a/RentAMovie/Views/Person/PersonTmdb.cshtml
+++ b/RentAMovie/Views/Person/PersonTmdb.cshtml
@@ -1,4 +1,4 @@
-﻿@model TmdbSingleActorModel
+﻿@model ViewTmdbSingleActorModel
 @{
     ViewData["Title"] = Model.Name;
     string photoPath = "https://image.tmdb.org/t/p/w300";
