--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IndexViewModel
+﻿@model ViewIndexModel
 @{
     ViewData["Title"] = "Home Page";
     string posterPath = "https://image.tmdb.org/t/p/w1920_and_h800_multi_faces";
