--- a/RentAMovie/wwwroot/css/movies.css
+++ b/RentAMovie/wwwroot/css/movies.css
@@ -11,6 +11,7 @@ main .container {
 
 .row {
     position: relative;
+    justify-content: center;
 }
 
 .card{
@@ -43,7 +44,7 @@ main .container {
 }
 
 .card-title {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .card-title:hover {
@@ -55,8 +56,8 @@ main .container {
 }
 
 .rating {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     background-color: #fff;
     border: 1px solid #212529;
     position: absolute;
