--- a/RentAMovie/Views/Movie/Edit.cshtml
+++ b/RentAMovie/Views/Movie/Edit.cshtml
@@ -9,6 +9,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/formMovie.js"></script>
 }
 @section Styles {
     <link rel="stylesheet" href="~/css/moviesCreate.css" />
