--- a/RentAMovie/Views/Movie/UserMovies.cshtml
+++ b/RentAMovie/Views/Movie/UserMovies.cshtml
@@ -32,7 +32,7 @@
 		}
 
 		<div class="card">
-			<a @*asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId"*@>
+			<a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">
 				@if (movie.PosterPath != null)
 				{
 					<img src="@movie.PosterPath" class="card-img-top" alt="@movie.Title poster">
@@ -47,7 +47,7 @@
 					<p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
 				</div>
 				<h5 class="card-title">
-					<a @*asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId"*@>@movie.Title</a>
+					<a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">@movie.Title</a>
 				</h5>
 				<h6>@(movie.ReleaseDate != null ? movie.ReleaseDate.Value.ToString("MMM dd, yyyy") : "-")</h6>
 			</div>
