Fixing poster sizes on cards and some styling. Modified User entity and scaffold identity files

--- a/RentAMovie/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using RentAMovie.Areas.Identity
 @using RentAMovie.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using RentAMovie.Areas.Identity.Pages.Account.Manage
 @using RentAMovie.Data.Models
+@using RentAMovie.Data
