--- a/RentAMovie/wwwroot/css/search.css
+++ b/RentAMovie/wwwroot/css/search.css
@@ -17,14 +17,14 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
     overflow-x: auto;
     margin-top: 10px;
 }
 
 .filter-item {
-    min-width: 100px;
-    background-color: #fff;
+    min-width: 120px;
+    background-color: #f2f2f2;
     padding: 5px;
     display: flex;
     justify-content: center;
@@ -32,7 +32,7 @@
     border-radius: 5px;
     margin-right: 15px;
     cursor: pointer;
-    border: 2px solid #fff;
+    border: 2px solid #000;
 }
 
 .filter-item p {
