--- a/RentAMovie/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -8,6 +8,11 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 
     var currentUser = data.Users.FirstOrDefault(u => u.Id == User.FindFirstValue(ClaimTypes.NameIdentifier));
+
+    var yearsFromCreation = DateTime.UtcNow.Year - currentUser.DateCreated.Year;
+    var monthsFromCreation = ((DateTime.UtcNow.Year - currentUser.DateCreated.Year) * 12) + DateTime.UtcNow.Month - currentUser.DateCreated.Month;
+    var daysFromCreation = (DateTime.UtcNow - currentUser.DateCreated).Days;
+    var differenceInYear = monthsFromCreation - (yearsFromCreation * 12);
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
@@ -24,7 +29,30 @@
             }
             <div class="user-details">
                 <p class="username">@User?.Identity?.Name</p>
-                <p>Member for @currentUser.DateCreated</p>
+                @if (differenceInYear == 1 && yearsFromCreation > 0)
+                {
+                    <p class="date">
+                        Member for @yearsFromCreation @(yearsFromCreation > 1 ? "years" : "year")@(differenceInYear > 0 ? ", " + differenceInYear : "") month
+                    </p>
+                }
+                else if (differenceInYear > 1 && yearsFromCreation > 0)
+                {
+                    <p class="date">
+                        Member for @yearsFromCreation @(yearsFromCreation > 1 ? "years" : "year")@(differenceInYear > 0 ? ", " + differenceInYear : "") months
+                    </p>
+                }
+                else if (yearsFromCreation <= 0 && monthsFromCreation <= 0)
+                {
+                    <p class="date">
+                        Member for @daysFromCreation @(daysFromCreation > 1 ? "days" : "day")
+                    </p>
+                }
+                else
+                {
+                    <p class="date">
+                        Member for @monthsFromCreation @(monthsFromCreation > 1 ? "months" : "month")
+                    </p>
+                }
             </div>
         </div>
         <form id="profile-form" method="post">
@@ -34,10 +62,15 @@
                 <label asp-for="Username" class="form-label"></label>
             </div>
             <div class="form-floating">
+                <input asp-for="Input.Photo" class="form-control" />
+                <label asp-for="Input.Photo" class="form-label"></label>
+                <span asp-validation-for="Input.Photo" class="text-danger"></span>
+            </div>
+            @*<div class="form-floating">
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
+            </div>*@
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
         </form>
     </div>
