--- a/RentAMovie/wwwroot/css/profile.css
+++ b/RentAMovie/wwwroot/css/profile.css
@@ -5,15 +5,24 @@
 
 .user-info {
     display: flex;
+    align-items: center;
 }
 
 .user-details {
     padding: 10px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+}
+
+.user-details p{
+    margin-bottom: 5px;
 }
 
 .username {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 500;
+}
+
+.date {
+    opacity: 80%;
 }
