--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using RentAMovie.Models.Home
 @using RentAMovie.Models.Search
 @using RentAMovie.Data.Models
+@using RentAMovie.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
