--- a/RentAMovie/wwwroot/css/profile.css
+++ b/RentAMovie/wwwroot/css/profile.css
@@ -1,6 +1,10 @@
 ﻿.profile-image {
     width: 150px;
+    height: 150px;
     border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+    box-shadow: 5px 5px 10px #888888;
 }
 
 .user-info {
@@ -9,7 +13,7 @@
 }
 
 .user-details {
-    padding: 10px;
+    padding: 10px 0 0 20px;
     display: flex;
     flex-direction: column;
 }
@@ -25,4 +29,126 @@
 
 .date {
     opacity: 80%;
+}
+
+.account-info {
+    margin: 30px 0 15px 0;
+}
+
+.header-button-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-button-section p {
+    color: #0d6efd;
+    cursor: pointer;
+    margin: 0;
+    font-weight: 500;
+    user-select: none;
+}
+
+.header-button-section a {
+    color: #0d6efd;
+    font-weight: 500;
+    user-select: none;
+    text-decoration: none;
+}
+
+.form-floating {
+    margin-bottom: 5px;
+    position: relative;
+}
+
+.data-buttons {
+    display: flex;
+    margin-right: 10px;
+}
+
+#download-data {
+    margin-right: 10px;
+}
+
+.change-link {
+    text-decoration: none;
+    position: absolute;
+    z-index: 5;
+    opacity: 80%;
+    transform: scale(.85) translateY(-0.5rem) translateX(0.15rem);
+    right: 13px;
+    top: 15px;
+    cursor: pointer;
+    user-select: none;
+    color: #0d6efd;
+}
+
+.change-link:hover {
+    color: #0d6efd;
+}
+
+.uploaded-movies,
+.written-reviews {
+    margin-bottom: 20px;
+}
+
+.movie-section {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    overflow-y: hidden;
+}
+
+.movie-item {
+    width: 150px;
+    margin-right: 5px;
+    background-color: #9ec5ff;
+    border-radius: 5px;
+}
+
+.movie-item img {
+    width: 100%;
+    height: 276px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
+    cursor: pointer;
+    border-radius: 5px 5px 0 0;
+}
+
+.movie-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.movie-info a {
+    text-decoration: none;
+    cursor: pointer;
+    color: #0a0a0a;
+}
+
+.not-available {
+    opacity: 80%;
+    margin-left: 10px;
+    user-select: none;
+}
+
+@media screen and (max-width: 473px) {
+    .movie-section {
+        display: block;
+    }
+
+    .movie-item {
+        width: 100%;
+        margin-right: 0px;
+    }
+
+}
+
+@media screen and (max-width: 270px) {
+    .user-info{
+        display: block;
+    }
 }
