--- a/RentAMovie/Views/Movie/MovieUser.cshtml
+++ b/RentAMovie/Views/Movie/MovieUser.cshtml
@@ -1,4 +1,6 @@
 ﻿@model UserSingleMovieModel
+@inject ViewMoviesDbContext data
+
 @{
     ViewData["Title"] = Model.Title + (Model.DatePublished != null ? $" ({Model.DatePublished.Value.Year})" : "");
 
@@ -6,6 +8,12 @@
     double minutes = Math.Round(Convert.ToDouble(Model.Runtime / 60.0 - hours) * 60);
 
     int index = 0;
+
+    User reviewUserOwner = null;
+    if (Model.Review != null)
+    {
+        reviewUserOwner = data.Users.FirstOrDefault(u => u.Id == Model.Review.UserId);
+    }
 }
 
 <div class="main-container">
@@ -125,6 +133,50 @@
             {
                 <div id="no-actors">
                     <h5>No actors available</h5>
+                </div>
+            }
+        </div>
+        <hr />
+        <div class="reviews">
+            @if (reviewUserOwner == null)
+            {
+                <h3>Reviews</h3>
+                <div class="review-section col-9">
+                    <div>No reviews yet</div>
+                    <div class="controls">
+                        <a asp-controller="Review" asp-action="Create" asp-route-movieId="@Model.Id">
+                            <p>Review this movie</p>
+                        </a>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="header-controls">
+                    <h3>Latest review</h3>
+                    <div class="controls">
+                        <a asp-controller="Review" asp-action="All" asp-route-movieId="@Model.Id">
+                            <p>View all reviews</p>
+                        </a>
+                        <a asp-controller="Review" asp-action="Create" asp-route-movieId="@Model.Id">
+                            <p>Review this movie</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="review-section col-9">
+                    <img src="@reviewUserOwner.Photo" />
+                    <div class="review-content">
+                        <h5>@reviewUserOwner.UserName</h5>
+                        <p class="review-date">Written on @Model.Review.CreationDate.ToString("MMM d, yyyy")</p>
+                        <p class="review-text">
+                            @Model.Review.Content
+                        </p>
+                        <div class="buttons">
+                            <a href="#">
+                                <p>Open review</p>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             }
         </div>
