--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using RentAMovie.Models.PersonModels
 @using RentAMovie.Models.Home
 @using RentAMovie.Models.Search
+@using RentAMovie.Models.Review
 @using RentAMovie.Data.Models
 @using RentAMovie.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
