--- a/RentAMovie/wwwroot/css/authentication.css
+++ b/RentAMovie/wwwroot/css/authentication.css
@@ -11,7 +11,13 @@
 .form-container h2 {
     font-size: 1.8rem;
     opacity: 80%;
-    user-select: none;
+
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .form-floating {
