--- a/RentAMovie/wwwroot/css/moviesSingle.css
+++ b/RentAMovie/wwwroot/css/moviesSingle.css
@@ -1,4 +1,8 @@
-﻿body .container{
+﻿footer .container {
+    color: #6c757d !important;
+}
+
+body .container{
     color: #f2f2f2;
 }
 
@@ -205,5 +209,105 @@
 #no-actors {
     width: fit-content !important;
     opacity: 80%;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
+}
+
+.review-section {
+    max-height: 300px;
+    display: flex;
+    border: 2px solid #d5d5d5;
+    border-radius: 10px;
+    padding: 20px;
+    margin-left: 10px;
+    box-shadow: 3px 5px 15px #a7a7a7;
+}
+
+.review-section img{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.review-content {
+    padding-left: 20px;
+}
+
+.review-content h5{
+    margin: 0;
+    font-size: 1.3rem;
+}
+
+.review-date {
+    opacity: 80%;
+    font-size: 0.9rem;
+}
+
+.review-text {
+    margin-bottom: 5px;
+    max-width: 630px;
+    max-height: 165px;
+    overflow: hidden;
+    word-wrap: anywhere;
+}
+
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.review-content a {
+    text-decoration: none !important;
+    color: #0c0c0c !important;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.review-content a p ,
+.controls a p{
+    margin: 0;
+}
+
+.review-content a p:hover{
+    color: #0d6efd;
+}
+
+.header-controls {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+
+.header-controls h3{
+    margin: 0;
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.controls a{
+    text-decoration: none !important;
+    color: #f2f2f2 !important;
+    background-color: #0d6efd;
+    font-weight: 500;
+    font-size: 1.0rem;
+    margin-right: 10px;
+    border-radius: 0.25rem;
+    padding: 8px;
+}
+
+.controls a:hover{
+    background-color: #0058db;
 }
