--- a/RentAMovie/wwwroot/css/personSingle.css
+++ b/RentAMovie/wwwroot/css/personSingle.css
@@ -26,8 +26,14 @@
     color: #0d6efd;
     font-weight: 500;
     cursor: pointer;
-    user-select: none;
     margin: 0;
+
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 .info-section h2 {
     margin-bottom: 0.8rem;
@@ -77,9 +83,15 @@
    font-weight: 500;
 }
 
-#wikipedia{
+#wikipedia {
     font-size: 0.9rem;
     opacity: 80%;
-    user-select: none;
     margin-bottom: 0;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
