--- a/RentAMovie/wwwroot/css/profile.css
+++ b/RentAMovie/wwwroot/css/profile.css
@@ -46,14 +46,26 @@
     cursor: pointer;
     margin: 0;
     font-weight: 500;
-    user-select: none;
+
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .header-button-section a {
     color: #0d6efd;
     font-weight: 500;
-    user-select: none;
     text-decoration: none;
+
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .form-floating {
@@ -79,8 +91,14 @@
     right: 13px;
     top: 15px;
     cursor: pointer;
-    user-select: none;
     color: #0d6efd;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .change-link:hover {
@@ -132,6 +150,12 @@
 .not-available {
     opacity: 80%;
     margin-left: 10px;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 
