--- a/RentAMovie/wwwroot/css/userMovies.css
+++ b/RentAMovie/wwwroot/css/userMovies.css
@@ -1,3 +1,20 @@
 ﻿.user-controls a {
     width: 100%;
 }
+
+.not-available-container {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.not-available {
+    opacity: 80%;
+    font-size: 1.2rem;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
